syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.mantella";

import "common.proto";

enum FeedEventType {
    FEED_EVENT_NONE = 0;
    FEED_EVENT_CREATE= 1;
    FEED_EVENT_DELETE = 2;
    FEED_EVENT_UPDATE = 3;
    FEED_EVENT_TRANS_CODE_COMPLETE = 4;
}

message FeedCreateEvent {
    string feedId = 1;
    string islandId = 2;
    string authorId = 3;
    uint64 createdAt = 4;
    string duplicateTag = 5;
    bool fromHost = 6;
    MediaType mediaType = 7;
    string hostId = 8;
    bool isWorks = 9;
}

message FeedUpdateEvent {
    string feedId = 1;
    string islandId = 2;
    string authorId = 3;
    repeated string membershipIds = 4;
}

message FeedDeleteEvent {
   string feedId = 1;
}

message FeedTransCodeCompleteEvent {
    string feedId = 1;
    string userId = 2;
}

message FeedEventMessage {
    FeedEventType type = 1;
    uint64 timestamp = 2;
    string eventId = 3;
    oneof event {
      FeedCreateEvent feedCreateEvent = 4;
      FeedDeleteEvent feedDeleteEvent = 5;
      FeedUpdateEvent feedUpdateEvent = 6;
      FeedTransCodeCompleteEvent feedTransCodeCompleteEvent = 7;
    }
}